[gd_scene load_steps=2 format=2]

[ext_resource path="res://lobby/lobby.gd" type="Script" id=1]

[node name="lobby" type="Control"]
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Panel" parent="."]
margin_right = 218.0
margin_bottom = 202.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 186.0
margin_bottom = 49.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Multiplayer (2 players)"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="addres_label" type="Label" parent="panel"]
margin_left = 16.0
margin_top = 64.0
margin_right = 74.0
margin_bottom = 78.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="address" type="LineEdit" parent="panel"]
margin_left = 16.0
margin_top = 90.0
margin_right = 198.0
margin_bottom = 114.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"

[node name="server_button" type="Button" parent="panel"]
margin_left = 16.0
margin_top = 128.0
margin_right = 91.0
margin_bottom = 147.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join_button" type="Button" parent="panel"]
margin_left = 117.0
margin_top = 128.0
margin_right = 197.0
margin_bottom = 142.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="status_ok" type="Label" parent="panel"]
margin_left = 16.0
margin_top = 160.0
margin_right = 216.0
margin_bottom = 169.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 1, 0.015625, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="status_fail" type="Label" parent="panel"]
margin_left = 16.0
margin_top = 160.0
margin_right = 202.0
margin_bottom = 159.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
[connection signal="pressed" from="panel/server_button" to="." method="_on_server_button_pressed"]
[connection signal="pressed" from="panel/join_button" to="." method="_on_join_button_pressed"]
